Fix portfolio ordering on mobile

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -99,7 +99,7 @@ main {
 
 .footer-nav {
   min-height: 12em;
-  padding-bottom: 2em;
+  padding: 1em 0 2em 0;
 }
 
 /* Typography */
